# qapi-rs

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  COPYING  Cargo.toml  README.md  aliases.js  ci.nix  clone-schema.sh  default.nix  filter-schema.sh  flake.nix  search-index.js  shell.nix
.github/workflows/: qapi-rs.yml
.vim/: coc-settings.json
codegen/: Cargo.toml
codegen/src/: lib.rs
examples/: Cargo.toml  guest_info.rs  qmp_query.rs
implementors/qapi/: trait.Command.js
implementors/qapi_parser/: trait.QemuRepo.js
implementors/qapi_spec/: trait.Command.js  trait.Event.js
implementors/tokio_qapi/: trait.Command.js
parser/: Cargo.toml
parser/src/: lib.rs
qapi/: Cargo.toml  Qga.t.html  Qmp.t.html  all.html  enum.Any.html  enum.ErrorClass.html  index.html  sidebar-items.js  struct.Empty.html  struct.Error.html  struct.Qga.html  struct.Qmp.html  struct.Stream.html  struct.Timestamp.html  trait.Command.html  trait.Event.html  type.Dictionary.html
qapi/examples/: guest_info.rs  qmp_query.rs
qapi/qga_impl/: struct.Qga.html
qapi/qmp_impl/: struct.Qmp.html
qapi/src/: lib.rs
qapi/src/futures/: codec.rs  mod.rs  tokio.rs  tower.rs
qapi/stream/: struct.Stream.html
qapi_codegen/: all.html  codegen.v.html  fn.codegen.html  index.html  sidebar-items.js
qapi_parser/: QemuFileRepo.t.html  QemuRepo.t.html  QemuRepoContext.t.html  all.html  index.html  sidebar-items.js  struct.Parser.html  struct.QemuFileRepo.html  struct.QemuRepoContext.html  trait.QemuRepo.html
qapi_parser/spec/: CombinedUnion.t.html  DataOrType.t.html  Include.t.html  PragmaDocRequired.t.html  PragmaWhitelist.t.html  Spec.t.html  enum.DataOrType.html  enum.Spec.html  index.html  sidebar-items.js  struct.Alternate.html  struct.CombinedUnion.html  struct.Command.html  struct.Data.html  struct.Enum.html  struct.Event.html  struct.Include.html  struct.PragmaDocRequired.html  struct.PragmaWhitelist.html  struct.Struct.html  struct.Type.html  (+2 more)
qapi_qga/: GuestAgentCommandInfo.t.html  GuestAgentInfo.t.html  GuestDiskAddress.t.html  GuestDiskBusType.t.html  GuestExec.t.html  GuestExecStatus.t.html  GuestFileRead.t.html  GuestFileSeek.t.html  GuestFileWhence.t.html  GuestFileWrite.t.html  GuestFilesystemInfo.t.html  GuestFilesystemTrimResponse.t.html  GuestFilesystemTrimResult.t.html  GuestFsfreezeStatus.t.html  GuestHostName.t.html  GuestIpAddress.t.html  GuestIpAddressType.t.html  GuestLogicalProcessor.t.html  GuestMemoryBlock.t.html  GuestMemoryBlockInfo.t.html  GuestMemoryBlockResponse.t.html  GuestMemoryBlockResponseType.t.html  GuestNetworkInterface.t.html  GuestNetworkInterfaceStat.t.html  GuestOSInfo.t.html  GuestPCIAddress.t.html  GuestShutdownMode.t.html  GuestTimezone.t.html  GuestUser.t.html  QGASeek.t.html  all.html  enum.Event.html  enum.GuestDiskBusType.html  enum.GuestFileWhence.html  enum.GuestFsfreezeStatus.html  enum.GuestIpAddressType.html  enum.GuestMemoryBlockResponseType.html  enum.GuestShutdownMode.html  enum.QGASeek.html  guest_exec.t.html  (+94 more)
qapi_qmp/: ACPIOSTInfo.t.html  ACPISlotType.t.html  ACPI_DEVICE_OST.t.html  Abort.t.html  AcpiTableOptions.t.html  ActionCompletionMode.t.html  AddfdInfo.t.html  BALLOON_CHANGE.t.html  BLOCK_IMAGE_CORRUPTED.t.html  BLOCK_IO_ERROR.t.html  BLOCK_JOB_CANCELLED.t.html  BLOCK_JOB_COMPLETED.t.html  BLOCK_JOB_ERROR.t.html  BLOCK_JOB_PENDING.t.html  BLOCK_JOB_READY.t.html  BLOCK_WRITE_THRESHOLD.t.html  BalloonInfo.t.html  BiosAtaTranslation.t.html  BlkdebugEvent.t.html  BlkdebugInjectErrorOptions.t.html  BlkdebugSetStateOptions.t.html  BlockDeviceInfo.t.html  BlockDeviceIoStatus.t.html  BlockDeviceMapEntry.t.html  BlockDeviceStats.t.html  BlockDeviceTimedStats.t.html  BlockDirtyBitmap.t.html  BlockDirtyBitmapAdd.t.html  BlockDirtyBitmapMerge.t.html  BlockDirtyBitmapSha256.t.html  BlockDirtyInfo.t.html  BlockErrorAction.t.html  BlockIOThrottle.t.html  BlockInfo.t.html  BlockJobInfo.t.html  BlockJobStatus.t.html  BlockJobType.t.html  BlockJobVerb.t.html  BlockLatencyHistogramInfo.t.html  BlockMeasureInfo.t.html  (+1153 more)
qapi_spec/: Any.t.html  CommandSerializer.t.html  CommandSerializerRef.t.html  Dictionary.t.html  ResponseEvent.t.html  all.html  enum.Any.html  enum.ErrorClass.html  enum.Response.html  enum.ResponseEvent.html  index.html  sidebar-items.js  struct.CommandSerializer.html  struct.CommandSerializerRef.html  struct.Empty.html  struct.Error.html  struct.Timestamp.html  trait.Command.html  trait.Event.html  type.Dictionary.html
qga/: Cargo.toml  build.rs
qga/schema/qga/: qapi-schema.json
qga/src/: lib.rs
qmp/: COPYING.GPLv2  Cargo.toml  build.rs
qmp/schema/: qapi-schema.json
qmp/schema/qapi/: acpi.json  audio.json  authz.json  block-core.json  block-export.json  block.json  char.json  common.json  compat.json  control.json  crypto.json  cryptodev.json  cxl.json  dump.json  ebpf.json  error.json  introspect.json  job.json  machine-common.json  machine-target.json  machine.json  migration.json  misc-target.json  misc.json  net.json  pci.json  pragma.json  qapi-schema.json  qdev.json  qom.json  rdma.json  replay.json  rocker.json  run-state.json  sockets.json  stats.json  target.json  tpm.json  trace.json  transaction.json  (+5 more)
qmp/src/: lib.rs
spec/: Cargo.toml
spec/src/: lib.rs
src/: lib.rs
tokio/: Cargo.toml
tokio/examples/: events.rs  guest_info.rs  qmp_query.rs
tokio/src/: codec.rs  lib.rs
tokio_qapi/: QapiDataStream.t.html  QapiEventStream.t.html  QapiFuture.t.html  QapiStream.t.html  QgaHandshake.t.html  QmpHandshake.t.html  all.html  data_stream.v.html  encode_command.v.html  enum.Any.html  enum.ErrorClass.html  event_stream.v.html  fn.data_stream.html  fn.encode_command.html  fn.event_stream.html  fn.qga_handshake.html  fn.qmp_handshake.html  fn.stream.html  index.html  qga_handshake.v.html  qmp_handshake.v.html  sidebar-items.js  struct.Empty.html  struct.Error.html  struct.QapiEventStream.html  struct.QapiFuture.html  struct.QapiStream.html  struct.QgaHandshake.html  struct.QmpHandshake.html  struct.Timestamp.html  trait.Command.html  trait.Event.html  type.Dictionary.html  type.QapiDataStream.html
(+33 files in other folders)
