[package]
name = "qapi"
version = "0.0.1"

[dependencies]
log = "^0.4.1"
serde = "^1.0.27"
serde_json = "^1.0.9"
qapi-spec = { version = "^0.0.1", path = "spec" }

qapi-qga = { version = "^0.0.1", path = "qga", optional = true }
qapi-qmp = { version = "^0.0.1", path = "qmp", optional = true }

[features]
qga = ["qapi-qga"]
qmp = ["qapi-qmp"]

[dev-dependencies]
env_logger = "^0.5.4"
