[package]
name = "qapi"
version = "0.3.0"
authors = ["arcnmx"]

description = "QEMU QMP and Guest Agent API"
keywords = ["qemu", "qmp", "qga", "qapi"]

documentation = "http://arcnmx.github.io/qapi-rs/qapi"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
serde = "^1.0.27"
serde_json = "^1.0.9"
qapi-spec = { version = "^0.2.0", path = "spec" }

log = { version = "^0.4.1", optional = true }
qapi-qga = { version = "^0.3.0", path = "qga", optional = true }
qapi-qmp = { version = "^0.3.0", path = "qmp", optional = true }

[features]
qga = ["qapi-qga", "log"]
qmp = ["qapi-qmp", "log"]

[dev-dependencies]
env_logger = "^0.5.4"
