[package]
name = "qapi-codegen"
version = "0.2.1"
authors = ["arcnmx"]

description = "QEMU QAPI codegen helper"
keywords = ["qemu", "qmp", "qga", "qapi"]

documentation = "http://arcnmx.github.io/qapi-rs/qapi_codegen"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "../README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
qapi-parser = { version = "^0.2.1", path = "../parser" }
