[package]
name = "qapi-examples"
version = "0.0.0"
authors = ["arcnmx"]
edition = "2018"
publish = false

[dependencies]
qapi = { version = "0.14", path = "../qapi", features = ["qmp", "qga", "async-tokio-all"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
futures = "0.3"
env_logger = "0.10"
