[package]
name = "qapi-parser"
version = "0.9.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2018"

description = "QEMU QAPI JSON specification parser"
keywords = ["qemu", "qmp", "qga", "qapi"]

documentation = "https://docs.rs/qapi-parser/"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "../README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "^1.0.27", features = [ "derive" ] }
serde_json = "^1.0.9"
