[package]
name = "qapi"
version = "0.12.0" # keep in sync with README and html_root_url
authors = ["arcnmx"]
edition = "2018"

description = "QEMU QMP and Guest Agent API"
keywords = ["qemu", "qmp", "qga", "qapi"]

documentation = "https://docs.rs/qapi"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "../README.md"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
log = "^0.4.6"
serde = "^1.0.27"
serde_json = "^1.0.9"

tokio = { version = "^1.0.0", default-features = false, features = ["io-util"], optional = true }
tower-service = { version = "^0.3.0", optional = true }
tokio-util = { version = "^0.7.0", features = ["codec"], optional = true }
futures = { version = "^0.3.5", optional = true }
memchr = { version = "^2.3.3", optional = true }
bytes = { version = "^1.0.0", optional = true }

qapi-spec = { version = "^0.3.0", path = "../spec" }
qapi-qga = { version = "^0.10.0", path = "../qga", optional = true }
qapi-qmp = { version = "^0.12.0", path = "../qmp", optional = true }

[features]
qga = ["qapi-qga"]
qmp = ["qapi-qmp"]
async = ["futures"]
async-tokio = ["async", "tokio", "tokio-util", "bytes", "memchr"]
async-tokio-net = ["async-tokio", "tokio/net"]
async-tokio-spawn = ["async-tokio", "tokio/rt"]
async-tokio-all = ["async-tokio-net", "async-tokio-spawn"]
async-tower = ["async", "tower-service"]
