[package]
name = "qapi-qga"
version = "0.3.0"
build = "build.rs"
authors = ["arcnmx"]

description = "QEMU Guest Agent protocol types"
keywords = ["qemu", "qga", "qapi"]

documentation = "http://arcnmx.github.io/qapi-rs/qapi_qga"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "../README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
qapi-codegen = { version = "^0.2.0", path = "../codegen" }

[dependencies]
serde = "^1.0.78"
serde_derive = "^1.0.78"
qapi-spec = { version = "^0.2.0", path = "../spec" }
