[package]
name = "qapi-qga"
version = "0.6.0" # keep in sync with html_root_url
build = "build.rs"
authors = ["arcnmx"]
edition = "2018"

description = "QEMU Guest Agent protocol types"
keywords = ["qemu", "qga", "qapi"]

documentation = "https://docs.rs/qapi-qga/"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "../README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
qapi-codegen = { version = "^0.5.0", path = "../codegen" }

[dependencies]
serde = { version = "^1.0.27", features = [ "derive" ] }
qapi-spec = { version = "^0.3.0", path = "../spec" }
