[package]
name = "qapi-spec"
version = "0.2.1"
authors = ["arcnmx"]

description = "QEMU QAPI common types"
keywords = ["qemu", "qmp", "qga", "qapi"]

documentation = "http://arcnmx.github.io/qapi-rs/qapi_spec"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "../README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
serde = "^1.0.27"
serde_derive = "^1.0.27"
serde_json = "^1.0.9"
base64 = "^0.10.0"
