[package]
name = "qapi-spec"
version = "0.3.1"
authors = ["arcnmx"]
edition = "2018"

description = "QEMU QAPI common types"
keywords = ["qemu", "qmp", "qga", "qapi"]

documentation = "https://docs.rs/qapi-spec/"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "../README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "^1.0.27", features = [ "derive" ] }
serde_json = "^1.0.9"
base64 = "^0.22.0"
