[package]
name = "tokio-qapi"
version = "0.5.0"
authors = ["arcnmx"]
edition = "2018"

description = "QEMU QMP and Guest Agent API tokio adapter"
keywords = ["qemu", "qmp", "qapi", "tokio", "async"]

documentation = "http://arcnmx.github.io/qapi-rs/tokio_qapi"
repository = "https://github.com/arcnmx/qapi-rs"
readme = "../README.md"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "arcnmx/qapi-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
qapi-qga = { version = "^0.5.0", path = "../qga", optional = true }
qapi-qmp = { version = "^0.5.0", path = "../qmp", optional = true }
qapi-spec = { version = "^0.2.2", path = "../spec" }
serde_json = "^1.0.9"
serde = "^1.0.27"
tokio = { version = "^0.2.0", default-features = false, features = ["io-util", "uds", "rt-core"] }
tower-service = { version = "^0.3.0", optional = true }
tokio-util = { version = "^0.3.1", features = ["codec"] }
futures = { version = "^0.3.5" }
result = "^1.0.0"
bytes = "^0.5.0"
log = "^0.4.6"

[dev-dependencies]
env_logger = "^0.6.0"

[features]
qga = ["qapi-qga"]
qmp = ["qapi-qmp"]
